--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.241.0",
-    "@mux/mux-node": "^6.3.0",
+    "@mux/mux-node": "^7.3.0",
     "@types/node-schedule": "^2.1.0",
     "africastalking": "^0.5.5",
     "aws-sdk": "^2.1281.0",
@@ -20,15 +20,16 @@
     "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "express-validator": "^6.14.0",
     "firebase-admin": "^11.4.1",
     "form-data": "^4.0.0",
     "http-errors": "~1.6.3",
     "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "luxon": "^3.3.0",
     "moment": "^2.29.1",
     "mongoose": "^6.2.0",
     "morgan": "~1.9.1",
@@ -37,6 +38,6 @@
     "nodemon": "^2.0.15",
     "randomstring": "^1.2.2",
     "toad-scheduler": "^2.2.0",
-    "twilio": "^3.83.1"
+    "twilio": "^4.11.0"
   }
 }
