--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "luxon": "^3.3.0",
+    "mailgun.js": "^8.2.1",
     "moment": "^2.29.1",
     "mongoose": "^6.2.0",
     "morgan": "~1.9.1",
